--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
@@ -30,21 +30,42 @@
 
 \begin{abstract}
 \noindent
-Shared agency is paradigmatically involved when two or more people paint a house together, tidy the toys away together, or lift a two-handled basket together.  To characterise shared agency, some philosophers have appealed to a special kind of intention or structure of intention, knowledge or commitment often called `shared intention'.  In this paper we argue that fully characterising shared agency may additionally require appeal to  motor representation.  Shared agency is not only a matter of what we intend: sometimes it also depends on interlocking structures of motor representation.  This may have consequences for some metaphysical, normative and phenomenological questions about shared agency.
+Shared agency is paradigmatically involved when two or more people paint a house together, tidy the toys away together, or lift a two-handled basket together.  
+To characterise shared agency, some philosophers have appealed to a special kind of intention or structure of intention, knowledge or commitment often called `shared intention'.  
+In this paper we argue that there are forms of shared agency characterising which requires appeal to  motor representation.  
+Shared agency is not only a matter of what we intend: sometimes it also depends on interlocking structures of motor representation.  This may have consequences for some metaphysical, normative and phenomenological questions about shared agency.
 
 \end{abstract}
 
+\section{***Discussion with Hong Yu}
+`Once we move beyond the single agent there's an a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
+This is slightly tricky for me because I don't think there's a single kind of agentive structure in individual action either.
 
+Dissimilarity between this paper and the paper on intention and motor representation: whereas it was maybe plausible to conjecture that all intentions bottom out in motor representation, it is not similarly plausible to claim that shared intentions bottom out in social motor representations (there are surely cases of shared agency where the sharing is entirely a matter of intention and does not involve motor representations at all).
 
+Hong Yu suggested that we need to include the argument about format in order to argue that motor representations have a role distinct from that of shared intention.
 
-%\section{***EVIDENCE***}
-%I now think three bits of evidence are relevant:
-%\begin{enumerate}
-%\item The GROOP effect shows that there are representations which specify each agent's task in relation to the other (so they are not simple representing the outcomes to which each of their actions are directed; they are representing an outcome to which their actions taken together are directed.)
-%\item \citet{kourtis:2012_predictive} shows that motor planning can occur for others' actions when we are engaged in joint action with them.
-%\item Vesper's ESPP paper (on jumping together and imagining jumping together --- jumping is published \citep{vesper:2012_jumping}, imagining jumping is about to be submitted (as of August 2012).  This shows that individuals are capable of running motor simulations of multiple roughly simultaneous actions.
-%\end{enumerate}
-%
+In discussion: I need to shift this paper from saying:
+\begin{quote}
+There is a form of shared agency and that form cannot be characterised without reference to motor representation.
+\end{quote}
+to saying:
+\begin{quote}
+There are at least two forms of shared agency (at least two agentive structures) and some of these are such that characterising them involves appeal to motor representation.
+\end{quote}
+This shift reveals a new problem: we become more open to the objection that philosophy should concern forms of shared agency involving intention only.
+
+I need to stress the \emph{parity argument}.
+The argument is this:
+If 
+\begin{quote}
+
+	two or more agents' actions being appropriately related to a shared intention (as Bratman characterises it) is sufficient for shared agency, 
+\end{quote}
+then
+\begin{quote}
+	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared agency.
+\end{quote}
 
 \section{Introduction}
 Shared agency is paradigmatically involved when two (or more) people 
@@ -60,9 +81,8 @@ In developmental psychology paradigm cases of shared agency include  two people
 
 A \emph{joint action} is an action or event involving shared agency.
 
-Shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible to engage in and understand different sorts of shared agency
-\citep{vesper_minimal_2010}.  
-Developmentally we want to know when shared agency emerges, what it presupposes and whether abilities to engage in it somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
+Shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible \citep{vesper_minimal_2010}.  
+Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
 Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
 Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
 And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
@@ -74,15 +94,18 @@ Where could we start in constructing or evaluating an account of shared agency?
 One possibility is to start with some well-known contrast cases.
 Contrast cases are pairs of events which are similar in terms of the behaviour and coordination they involve but where one exemplifies shared agency  while the other does not.  
 Thus \citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
-The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together involves shared agency whereas merely walking side by side is not. 
-Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first is a case involves shared agency, the second does not; but the same movements occur in both.  
+The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together involves shared agency whereas merely walking side by side does not. 
+Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first  case involves shared agency, the second does not; but the same movements occur in both.%
+\footnote{
+Compare Pears on individual action, using contrast cases to argue that whether something is an action depends on its antecedents ***
+}  
 These sorts of contrast case invite the question, 
 How does shared agency differ from individual but parallel agency? 
 Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
 And Searle’s example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
 So one constraint on any account of shared agency is that it should enable us to make systematic sense of these and other contrast cases.
 
-\section{Shared Intention}
+\section{Shared intention}
 On the leading, best developed accounts of shared agency in philosophy and psychology, 
 shared agency is explained  in terms of a special kind of intention or structure of intention, knowledge and commitment often called a shared intention.
 On this widely held view, the difference between our walking together and two strangers merely walking side-by-side is that one event is appropriately related to a shared intention whereas the other is not.
@@ -111,6 +134,10 @@ Some philosophers and psychologists have endorses the strong claim.  For instanc
 %
 \begin{quote} 
 `I take a collective action to involve a collective intention.'  \citep[p.\ 5]{Gilbert:2006wr}
+
+\emph{
+***This quote is not clearly endorsing the strong claim (and we don't want to deny that all shared agency will involve shared intention (cf not arguing that there are individual actions which involve intention in paper-1).)
+}
 \end{quote}
 %
 Further examples could be given  (%
@@ -137,13 +164,13 @@ We shall argue, however, that distinguishing systematically between the contrast
 {\label{text:second_consideration} A second consideration} in favour of this view is a possible parallel between joint action and ordinary, individual action.
 If you think that events are actions in virtue of being appropriately related to intentions, 
 and if you think that shared intention stands to joint action as plain vanilla intention stands to ordinary, individual action,
-then it seems reasonable to suppose that for an event to be a joint action is for it to be appropriately related to a shared intention (as \citealp{Pacherie:2012fk} suggests).
+then it seems reasonable to suppose that for an event to be a joint action is for it to be appropriately related to a shared intention (\citealp{Pacherie:2012fk} offers this argument).
 
 Concerning this second consideration, 
 we take for granted that the parallel obtains but we do not accept the view about ordinary, individual action.
 Not everyone accepts that for an event to be an action is for it to be appropriately related to an intention.
 Some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
-For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' \citet[p.\ 251]{bratman:2000_valuing}.%
+For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' \citet[p.\ 251]{bratman:2000_valuing}. 
 %\footnote{
 %For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
 %describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
@@ -158,11 +185,16 @@ the second consideration---the idea that the relation of shared intention to joi
 
 
 
-\section{Motor Representation}
+\section{Motor representation}
 Since we aim to argue that a fully adequate account of shared agency must appeal to motor representation, it may be helpful first to provide some background about motor representation.
 
-A \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.
-We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.]{wolpert:1995internal, miall:1996_forward}.
+A \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.  
+%Imagine someone who, while remaining seated, moves an object from her right to her left, passing it between her hands as she does so. 
+%The transition between hands is not something she needs to think or reason about. 
+%But if the transition occurs without any pause---if she does not have to wait before releasing the object from her right hand into her left in order to check that the object is securely in her left hand---this is a sign that her action involves predicting the position of her left hand.
+%***continue this example?
+We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.][]{wolpert:1995internal, miall:1996_forward}.
+%*HY asks why focus here on forward models
 
 Motor representations are in some ways similar to intentions,
 as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
@@ -184,6 +216,22 @@ So much for the bare notion of motor representation.
 Why suppose that motor representation might be needed to explain shared agency?
 
 
+\section{Interpersonal coordination and motor representation}
+
+These bits of evidence are relevant (***):
+%
+\begin{enumerate}
+
+\item \citet{kourtis:2012_predictive} shows that motor planning can occur for others' actions when we are engaged in joint action with them.
+
+\item Vesper's ESPP paper (on jumping together and imagining jumping together --- jumping is published \citep{vesper:2012_jumping}, imagining jumping is about to be submitted (as of August 2012).  This shows that individuals are capable of running motor simulations of multiple roughly simultaneous actions. 
+(The important point for me is that one can simulate roughly simultaneous actions, not that the simulations are simultaneous.)
+
+\item The GROOP effect shows that there are representations which specify each agent's task in relation to the other (so they are not simple representing the outcomes to which each of their actions are directed; they are representing an outcome to which their actions taken together are directed.)
+
+\item Vesper says forthcoming EEG paper using piano playing paradigm on agent-neutral identification of error: one brain wave signals whether there is an error, and a different brain wave signals whose error it is (also tells you whether the overall harmonics are affected)
+\end{enumerate}
+
 \section{Social motor representation}
 We start from an empirical premise which is about enabling conditions for shared agency only: some joint actions are facilitated by reciprocal, agent-neutral motor representations of outcomes whose obtaining would normally involve action on the part of each agent.
 
@@ -192,7 +240,7 @@ As already mentioned, a \textit{motor} representation is the sort of representat
 To repeat, motor representations are not concerned with merely kinematic or dynamic features of actions only.
 Rather, some motor representations represent outcomes, such as the movement of a target object from one place to another.
 
-A representation (motor or not) is \emph{agent-neutral} if its content does not specify any agent or agents.%
+A representation (motor or not) is \emph{agent-neutral} if its content does not specify any particular agent or agents.%
 \footnote{
 Our use of the term `agent-netural' to describe motor representations bears no relation to the use of the same term  to describe reasons \citep[on the latter, see][]{Parfit:1984fk}.
 }
@@ -207,12 +255,17 @@ The agent-neutrality of a representation does not require that the agents are no
 Strictly the following argument does not hinge on the agent-neutrality of representations.
 It is sufficient for our purposes that there are reciprocal motor representations  of outcomes whose obtaining would normally involve action on the part of each of the reciprocating agents.
 In principle such representations could have contents which specify other agents or multiple agents. 
-We focus on agent-neutral representations to simplify exposition.
-It may be important that our view is consistent with the possibility that reciprocal motor representations are agent-neutral. 
+We focus on agent-neutral representations to show that our view is consistent with the possibility that reciprocal motor representations are agent-neutral. 
 }
 
 Two or more agents have \emph{reciprocal} motor representations  just if there is a single outcome and each agent has a motor representation of that outcome. 
 It is hardly controversial that reciprocal motor representations exist, for their existence is suggested by by a large body of research on motor cognition in action observation.
+[***Rest of this paragraph belongs in the evidence section?
+Should be clearer about transition:
+(a) I am observing and we reciprocally represent an outcome of your action (mirroring).
+(b) We are interacting and reciprocally represent an outcome of your action (mirroring in joint action).
+(c) We are interacting and reciprocally represent an outcome to which our actions are distributively directed.
+]
 It is more controversial that reciprocal motor representation occurs in joint action, but there is some evidence for this claim too.%
 \footnote{
 See \citet{kourtis:2012_predictive}: `the partner’s expected action is simulated at the motor level, which probably facilitates effective performance of the joint action.'
@@ -241,11 +294,48 @@ After all, social motor representation might be an enabling condition for some i
 
 [*HY: I'm planning a short section on evidence for social motor representation.  But as I'm going beyond the evidence anyway, I don't plan to include it in presenting this paper to philosophers.]
 
-\section{How could social motor representation facilitate joint action?}
-Suppose that social motor representation is present in some joint action contexts.
-It doesn't follow, of course, that social motor representation facilitates some joint actions.
+\section{How could social motor representation coordinate actions?}
+Suppose that social motor representation is sometimes present when two or more agents act together.
+It doesn't follow, of course, that social motor representation will play any role in coordinating the agents' actions.
 But let us consider just the possibility that it might.
-How could social motor representation facilitate joint action even in principle?
+How could this happen?
+How could social motor representation play a role in coordinating action when two or more agents act together?
+
+To answer this question let us step back from motor representation to illustrate a general principle about planning.
+Suppose that Aravinda runs the trains and Gerhard runs the busses.
+Twice a year, on the equinoxes, Aravinda updates the train timetables and sends Gerhard the changes.
+For his part Gerhard also updates the bus timetables twice a year, on the solstices, and sends Aravinda the changes.
+Each wants their services to be optimally coordinated with the other's services in the sense of minimising passengers' journey times (perhaps only in order to maximise profits).
+So how successful Gerhard's plans are depends on Aravinda's plans, and conversely. 
+This is why each is responsive to the other's plans; indeed, each may even try to predict changes in the other's plans.  
+But from each individual's point of view, the other's plans are  merely a constraint.
+This approach to planning suffers from two defects.
+First, it is unlikely to be optimal in the sense of resulting, eventually, in a combination of plans such that no other combination of plans would have been better for at least one service and no worse for either service.
+Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trains and buses, with the fewest iterations.
+How could they do better?
+One possibility may be to have a single plan covering busses and trains---perhaps for example Aravinda could buy Gerhard's franchise. 
+But suppose that this is not possible, and that there are limits on how much information Aravinda and Gerhard can share. 
+Now there is a single goal to which Aravinda and Gerhard's activities are both directed.
+
+
+
+%Let us go very slowly here.
+%Suppose that, in moving the mug, you try to locate two separate plans:
+%a plan for your left hand and a plan for your right hand.
+%In the Left Plan (as we might call it), the movements of the right hand feature as a constraint.
+%And conversely for the Right Plan.
+%It is almost as if you two hands are under the control of two separate agents who periodically share information about plans.
+%So if you update the Right Plan, you will need to make compensating changes to the Left Plan.
+%And of course those compensating changes to the left plan may in turn trigger further changes to the Right Plan.
+%And so on.
+%This approach might work in some cases. 
+%But it imposes two costs.
+%First, it is unlikely to be efficient in the sense of minimising the range of possible combinations that are considered. 
+%Second, it is unlikely to be optimal in the sense of finding a combination of plans such that no other combination of plans would have been better for at least one hand and no worse for any hand.
+%How could you have done beter?
+%The mistake was to have two separate plans, Left and Right, in each of which the movements of the other hand are a constraint.
+%The better 
+
 
 To answer this question
 let us take a step back and consider an individual action.
@@ -263,6 +353,9 @@ and plans for the movements of each hand are components of this larger plan.
 It is in part because they are parts of a larger plan that the plan for one hand constrains and is constrained by the plan for the other hand.
 
 
+
+
+
 How is this relevant to the case of joint action?
 In joint action the agents have the same goal, to move the object from one place to another.
 They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
@@ -275,6 +368,12 @@ Then having each agent plan the whole joint action means that (i) each agent pla
 (ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action,
 and 
 (iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
+
+[***TODO: (a) contrast this case with a team of experts, each with different motor expertise (e.g.\ musicians playing together).  
+They can't plan each others' actions.
+(b) Discuss in how much detail each others' actions should be planned so as to enable coordination.
+]
+
 
 So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.
 
