--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -45,6 +45,8 @@ I now think three bits of evidence are relevant:
 \item The GROOP effect shows that there are representations which specify each agent's task in relation to the other (so they are not simple representing the outcomes to which each of their actions are directed; they are representing an outcome to which their actions taken together are directed.)
 \item \citet{kourtis:2012_predictive} shows that motor planning can occur for others' actions when we are engaged in joint action with them.
 \item Vesper's ESPP paper (on jumping together and imagining jumping together --- jumping is published \citep{vesper:2012_jumping}, imagining jumping is about to be submitted (as of August 2012).  This shows that individuals are capable of running motor simulations of multiple roughly simultaneous actions.
+\item Vesper says forthcoming EEG paper using piano playing paradigm on agent-neutral identification of error: one brain wave signals whether there is an error, and a different brain wave signals whose error it is (also tells you whether the overall harmonics are affected)
+
 \end{enumerate}
 
 
